Added more Tutorials

--- a/README
+++ b/README
@@ -1,1 +1,8 @@
-## Simple Git Tutorial für Anfänger
+<h1>Simple Git Tutorial für Anfänger</h1>
+
+Other Tutorials
+<ul>
+  <li>http://www.ndpsoftware.com/git-cheatsheet.html</li>
+  <li>http://rogerdudler.github.io/git-guide/index.de.html</li>
+</ul>
+
